Add docs Removed MongoDB and GCP