@@ -1,11 +1,9 @@
 package com.activepieces;
 
 import com.activepieces.common.CascadeDeleteHandler;
+import com.activepieces.common.pagination.impl.PaginationRepositoryImpl;
 import com.activepieces.guardian.server.ResourcePublisher;
 import com.activepieces.instance.client.InstancePublisher;
-import com.github.cloudyrock.spring.v5.EnableMongock;
-import com.google.common.collect.ImmutableList;
-import lombok.extern.log4j.Log4j;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
@@ -13,30 +11,21 @@ import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.boot.autoconfigure.domain.EntityScan;
 import org.springframework.context.annotation.Bean;
-import org.springframework.context.annotation.Primary;
-import org.springframework.core.io.ClassPathResource;
-import org.springframework.core.io.Resource;
 import org.springframework.data.jpa.repository.config.EnableJpaRepositories;
-import org.springframework.data.mongodb.repository.config.EnableMongoRepositories;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.scheduling.annotation.EnableAsync;
 import org.springframework.scheduling.annotation.EnableScheduling;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
-import javax.sql.DataSource;
 import javax.validation.Validation;
 import javax.validation.Validator;
 import javax.validation.ValidatorFactory;
-import java.io.IOException;
-import java.time.Duration;
+import java.util.List;
 
 @SpringBootApplication(scanBasePackages = "com.activepieces")
-@EnableJpaRepositories(basePackages = "com.activepieces")
+@EnableJpaRepositories(basePackages = "com.activepieces", repositoryBaseClass = PaginationRepositoryImpl.class)
 @EntityScan(basePackages = "com.activepieces")
-@EnableMongoRepositories(
-    basePackages = "com.activepieces")
-@EnableMongock
 @EnableScheduling
 @EnableAsync
 @Log4j2
@@ -70,7 +59,7 @@ public class BackendApplication implements CommandLineRunner {
 
   @Bean
   public ResourcePublisher resourcePublisher(CascadeDeleteHandler cascadeDeleteHandler) {
-    return new ResourcePublisher(ImmutableList.of(cascadeDeleteHandler));
+    return new ResourcePublisher(List.of(cascadeDeleteHandler));
   }
 
   @Bean
